# delta

./: Cargo.toml
game/: first.rs  moon.rs
meshes/: box.glb  box.gltf  cube.gltf  sphere.glb
shaders/: forward.wgsl
src/: app.rs  asset_manager.rs  game.rs  lib.rs  render.rs
src/asset_manager/: importer.rs  light.rs  material.rs  mesh.rs  texture.rs
src/render/: gpu.rs
