[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]

anyhow = "1.0.99"
async-trait = "0.1.89"
bytemuck = "1.23.2"
env_logger = "0.11.8"
glam = "0.30.5"
gltf = "1.4.1"
hecs = "0.10.5"
image = "0.25.8"
pollster = "0.4.0"
slotmap = "1.0.7"
wgpu = "26.0.1"
winit = "0.30.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
web-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"


[lib]
crate-type = ["cdylib", "rlib"]


[[example]]
name="ex1"
path="game/first.rs"

[[example]]
name="moon"
path="game/moon.rs"
